Allow to set minimum user id lower than 1000

Allow to set a minimum user id lower than 1000. Especially on older
systems (and/or systems upgraded since years), the user ids might be
below 1000 (e.g. on openSUSE, 500+ was the default for normal users
years ago).

BUG: 347942
FIXED-IN: 5.4.2
REVIEW: 125191